--- a/emailSystemSenderFrontEnd/src/app/app.component.html
+++ b/emailSystemSenderFrontEnd/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg sticky-top bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ScriptChain health</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,26 +12,13 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="userinfo">Users</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
       </ul>
     </div>
   </div>
 </nav>
-<figure class="text-center mt-3 mb-5 g-3 mt-5 pt-5 ps-5 pe-5 ms-5 me-5">
+<figure class="text-center mb-5 g-3 pt-5 ps-5 pe-5 ms-5 me-5">
   <blockquote class="blockquote">
-    <h1 class="navbar-brand fs-1">Email Sender System</h1>
+    <h1 class="navbar-brand fs-1 shadow-lg p-3 mb-5 bg-white rounded">Email Sender System</h1>
   </blockquote>
 
 </figure>
