--- a/emailSystemSenderFrontEnd/src/app/components/createuser/createuser.component.html
+++ b/emailSystemSenderFrontEnd/src/app/components/createuser/createuser.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-12 mt-3" >
                 <div class="row mt-3 " *ngIf="!getIdParams">
-                    <button class="btn btn-primary btn-lg" (click)="userSubmit()">Add User</button>
+                    <button class="btn btn-dark btn-lg" (click)="userSubmit()">Add User</button>
                 </div> 
                 <div class="row mt-3 " *ngIf="getIdParams" (click)="updateUser()">
                     <button class="btn btn-success btn-lg">Update User</button>
