--- a/emailSystemSenderFrontEnd/src/app/components/userinfo/userinfo.component.html
+++ b/emailSystemSenderFrontEnd/src/app/components/userinfo/userinfo.component.html
@@ -3,27 +3,27 @@
     <strong>{{successMsg}}</strong> 
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-    <table class="table table-dark table-striped table-bordered">
-        <thead>
+    <table class="table table-dark table-striped">
+        <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Full Name</th>
             <th scope="col">Email</th>
             <th scope="col">Phone</th>
+            <th scope="col">Email</th>
             <th scope="col">Update</th>
             <th scope="col">Delete</th>
-            <th scope="col">Send Email</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table shadow-lg p-3 mb-5">
           <tr *ngFor="let userData of users">
             <th scope="row">{{userData.id}}</th>
             <td>{{userData.fullName}}</td>
             <td>{{userData.email}}</td>
             <td>{{userData.phone}}</td>
-            <td><button class="btn btn-warning" [routerLink]="['/createuser',userData.id]"> Update </button></td>
-            <td><button class="btn btn-danger" (click)="deleteUserData(userData.id)" >Delete</button></td>
-            <td><button class="btn btn-primary" (click)="emailUser(userData.id,userData.fullName,userData.email)" >Email</button></td>
+            <td><button class="btn btn-outline-success" (click)="emailUser(userData.id,userData.fullName,userData.email)" >E-mail</button></td>
+            <td><button class="btn btn-outline-secondary" [routerLink]="['/createuser',userData.id]"> Update </button></td>
+            <td><button class="btn btn-outline-danger" (click)="deleteUserData(userData.id)" >Delete</button></td>
           </tr>
         </tbody>
       </table>
